Enhance README with application details and instructions
Expanded README to include detailed application features, requirements, CSV input format, build instructions, usage flow, and troubleshooting tips.